--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.3'
 services:
   snake:
-    image: 'amrit96/snake'
+    image: 'bruno101/proximo-snake:1.0.0'
     environment:
       - "PORT:3000"
     ports:
-      - "80:3000"
+      - "88:3000"
     volumes:
       - ./:/app
