--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   snake:
-    image: 'amrit96/snake'
+    image: 'dv544/snake'
     environment:
       - "PORT:3000"
     ports:
